# hello_ocaml

./: README.md  dune-project  hello_ocaml.opam
lib/: dune  en.ml  es.ml  hello_ocaml.ml
test/: dune
